# CrashExplorer

./: .gitignore  Changelog.md  README.md
crashexplorer/: crashexplorer.sln
crashexplorer/UnitTest/: TestExceptionCodes.cs  TestNotepadPlusPlusAccessViolation.cs  TestNotepadPlusPlusCallstack.cs  TestNotepadPlusPlusDivideByZero.cs  TestProjectCrashInDynamicLibA.cs  TestProjectCrashInDynamicLibB.cs  TestProjectCrashInMain.cs  TestProjectCrashInStaticLibA.cs  TestProjectCrashInStaticLibB.cs  UnitTest.csproj
crashexplorer/UnitTest/Properties/: AssemblyInfo.cs
crashexplorer/UnitTest/TestFiles/: NppBigSwitch.cod
crashexplorer/UnitTest/TestFiles/debug/: dllmain.cod  dynamic_library.map  main.cod  math_library.cod  pattern_searcher.cod  quick_sort.cod  spanning_tree.cod  test_project.map
crashexplorer/UnitTest/TestFiles/release/: dynamic_library.map  main.cod  math_library.cod  pattern_searcher.cod  spanning_tree.cod  test_project.map
crashexplorer/crashexplorer/: AboutBox1.Designer.cs  AboutBox1.cs  AboutBox1.resx  Analyzer.cs  Form1.Designer.cs  Form1.cs  Form1.resx  ImageToolTip.cs  LogOutput.cs  OutputHelper.cs  Program.cs  crashexplorer.csproj  output_helper_t.cs
crashexplorer/crashexplorer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
test_projects/test_project/: CMakeLists.txt
test_projects/test_project/dynamic_library/: CMakeLists.txt  math_library.cpp  math_library.hpp  spanning_tree.cpp  spanning_tree.hpp
test_projects/test_project/main/: CMakeLists.txt  main.cpp
test_projects/test_project/static_library/: CMakeLists.txt  pattern_searcher.cpp  pattern_searcher.hpp  quick_sort.cpp  quick_sort.hpp
